--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ header .header_container {
     justify-content: space-around;
     align-items: center;
     height: 70vh;
-    width: 50vw;
+    width: 80vw;
 }
 
 header .header_container .title {
@@ -127,17 +127,24 @@ header .header_container .search_bar button:hover {
 
 }
 
+main{
+    margin-bottom: 30px;
+}
 main .container .result {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     margin: 30px auto;
 }
 
+main .container .result select{
+    border-radius: 3px;
+    border: 1px solid rgb(68, 67, 67, 0.3);
+    height: 30px;
 
-main .container .result {
-    max-width: 100%;
-    display: flex;
-    justify-content: space-around;
-
+    font-size: .9rem;
 }
+
 
 main .container .result span {
     font-weight: 500;
@@ -256,13 +263,16 @@ footer .footer_container .info_agence span {
         margin: auto;
     }
 
+    header .header_container .title{
+        margin: 0;
+    }
 
     header .header_container .title h1 {
-        font-size: 3.3rem;
+        font-size: 4rem;
     }
 
     header .header_container .title h2 {
-        font-size: 1.2rem;
+        font-size: 1.5rem;
     }
 
     header .header_container .search_bar {
@@ -301,17 +311,24 @@ footer .footer_container .info_agence span {
     }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 618px) {
     header .menu_container{
         height: 40vh;
     }
+
+    
+
+    header .header_container .title {
+        width: 300px;
+    }
+
 
     header .header_container .title h1{
         font-size: 2.3rem;
      }
  
      header .header_container .title h2{
-         font-size: 1rem;
+         font-size: 0.9rem;
      }
     
 
@@ -359,11 +376,11 @@ footer .footer_container .info_agence span {
     }
 
     header .header_container .title h1{
-       font-size: 1.5rem;
+       font-size: 2.3rem;
     }
 
     header .header_container .title h2{
-        font-size: 0.7rem;
+        font-size: 0.8rem;
     }
 
     header .header_container .search_bar{
